# GameEngineFramework

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.txt  README.md  vcpkg-configuration.json  vcpkg.json
Cooker/: CMakeLists.txt
Cooker/src/: CookerMain.cpp
Editor/: CMakeLists.txt  Editor.cpp
Editor/src/: EditorApplication.cpp  EditorApplication.h  EditorImGuiLayer.cpp  EditorImGuiLayer.h  EditorMain.cpp  EditorTitleBar.cpp  EditorTitleBar.h  ImGuiInputMap.h  Model.h  Shader.h  Subprocess.cpp  Subprocess.h  UndoHistory.cpp  UndoHistory.h
Editor/src/Exported/: scene.json
Editor/src/Exported/Env/: CREDITS.md  studio.hdr
Editor/src/Exported/Layouts/: DefaultLayout.ini
Editor/src/Exported/Model/: plane.mtl
Editor/src/Exported/Scripts/: bouncer.lua  spinner.lua
Editor/src/Exported/Shaders/: bloom_blur_frag.glsl  bloom_bright_frag.glsl  bloom_composite_frag.glsl  brdf_lut_frag.glsl  colorgrade_frag.glsl  cube_capture_vert.glsl  equirect_to_cube_frag.glsl  frag.glsl  fxaa_frag.glsl  irradiance_conv_frag.glsl  outline_frag.glsl  prefilter_frag.glsl  prepass_frag.glsl  procedural_sky_frag.glsl  shadow_depth_frag.glsl  shadow_depth_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  tonemap_frag.glsl  tonemap_vert.glsl  vertex.glsl  vignette_frag.glsl
Editor/src/panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Engine/: CMakeLists.txt
Engine/include/: Engine.h
Engine/src/: Engine.cpp
Engine/src/assets/: AssetIndex.cpp  AssetIndex.h  AssetValidator.cpp  AssetValidator.h  ImportSettings.cpp  ImportSettings.h
Engine/src/audio/: AudioBackendRegistry.cpp  AudioBackendRegistry.h  AudioComponents.h  AudioInstall.h  AudioTypes.h  AudioWorld.cpp  AudioWorld.h  IAudioBackend.h  miniaudio_impl.cpp
Engine/src/audio/backends/: MiniaudioBackend.cpp  MiniaudioBackend.h  NullAudioBackend.h
Engine/src/core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  CameraDirector.cpp  CameraDirector.h  Components.h  Core.h  DemoGameplay.h  Entity.h  Event.h  EventBus.h  FixedTimestep.h  GLInit.cpp  GLInit.h  ImageIO.cpp  ImageIO.h  InputMap.cpp  InputMap.h  InputSystem.h  JobSystem.cpp  JobSystem.h  Main.h  Material.h  Mesh.h  Model.cpp  Model.h  PathSandbox.cpp  PathSandbox.h  ProjectSettings.cpp  ProjectSettings.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneSerializer.cpp  (+6 more)
Engine/src/gui/: GuiLayer.cpp  GuiLayer.h
Engine/src/physics/: IPhysicsBackend.h  PhysicsBackendRegistry.cpp  PhysicsBackendRegistry.h  PhysicsComponents.h  PhysicsInstall.h  PhysicsTypes.h  PhysicsWorld.cpp  PhysicsWorld.h
Engine/src/physics/backends/: JoltPhysicsBackend.cpp  JoltPhysicsBackend.h  PhysXPhysicsBackend.cpp  PhysXPhysicsBackend.h  SimplePhysicsBackend.cpp  SimplePhysicsBackend.h
Engine/src/render/: CSMSplits.h  IBLBaker.cpp  IBLBaker.h  IRenderPass.h  RenderPipeline.h
Engine/src/render/passes/: BloomPass.cpp  BloomPass.h  ColorGradePass.cpp  ColorGradePass.h  FXAAPass.cpp  FXAAPass.h  ForwardOpaquePass.cpp  ForwardOpaquePass.h  ForwardShading.h  OutlinePass.cpp  OutlinePass.h  ShadowCSMPass.cpp  ShadowCSMPass.h  SkyboxPass.cpp  SkyboxPass.h  TonemapPass.cpp  TonemapPass.h  TransparentPass.cpp  TransparentPass.h  VignettePass.cpp  VignettePass.h
Engine/src/renderer/: renderer.cpp  renderer.h  window.cpp  window.h
Engine/src/scene/: Scene.cpp  Scene.h
Engine/src/script/: IScriptBackend.h  IScriptHost.h  ScriptBackendRegistry.cpp  ScriptBackendRegistry.h  ScriptComponent.h  ScriptInstall.h  ScriptTypes.h  ScriptWorld.cpp  ScriptWorld.h
Engine/src/script/backends/: LuaScriptBackend.cpp  LuaScriptBackend.h  NullScriptBackend.cpp  NullScriptBackend.h
Player/: CMakeLists.txt
Player/src/: PlayerMain.cpp
cmake/: stage_runtime_assets.cmake
docs/: BUILDING_LINUX.md  CMakeLists.txt  Doxyfile.in  ENGINE_AUDIT_2026-07.md  api-index.md
docs/manual/: architecture.md  assets.md  editor.md  entities-and-components.md  gameplay-scripting.md  getting-started.md  index.md  lua-scripting.md  performance.md  physics.md  post-processing.md  rendering.md  scenes-and-shipping.md
resources/: app.rc
scripts/: linux-build.sh  make_icon.py
tests/: CMakeLists.txt  test_asset_index.cpp  test_asset_manager_async.cpp  test_asset_validator.cpp  test_audio.cpp  test_camera_director.cpp  test_event_bus.cpp  test_fixed_timestep.cpp  test_fxaa.cpp  test_hierarchy.cpp  test_ibl.cpp  test_import_settings.cpp  test_input_map.cpp  test_input_system_glfw.cpp  test_input_system_nullsafe.cpp  test_job_system.cpp  test_lights.cpp  test_mesh_material.cpp  test_model_decode.cpp  test_perf_render.cpp  test_physics.cpp  test_render_passes.cpp  test_scene_details.cpp  test_scene_serializer.cpp  test_scripting.cpp  test_splits.cpp  test_undo_history.cpp
tools/: make_example_env.py
